# doc_erp_system

./: .dockerignore  .env.example  .gitignore  01_System_Specification.md  02_Data_Model.md  03_API_Specification.md  04_Post_SDD_Tool_Workflow.md  05_Tool_Independent_Tasks.md  06_Organization_Complexity_Analysis.md  README.md  docker-compose.yml
.github/: copilot-instructions.md
.specify/: feature.json
.specify/extensions/: .registry
.specify/integrations/: copilot.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml  requirements-dev.txt  requirements.txt
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/v1/: ai.py  auth.py  documents.py  projects.py  router.py  spec_items.py
backend/app/api/v1/endpoints/: attributes.py  auth.py  documents.py  partitions.py  projects.py
backend/app/core/: config.py  database.py  security.py
backend/app/crud/: attribute.py  document.py  partition.py  project.py  user.py
backend/app/db/: base.py  session.py
backend/app/models/: __init__.py  attribute.py  audit_log.py  audit_package.py  document.py  fmeda.py  lock_event.py  org.py  partition.py  project.py  refresh_token.py  spec_item.py  standard.py  traceability.py
backend/app/schemas/: attribute.py  auth.py  document.py  partition.py  project.py  user.py
backend/app/services/: ai_consultant.py  attribute_service.py  dependency_engine.py  document_state_machine.py  notification.py
backend/app/tasks/: __init__.py  cascade_lock.py  cycle_detection.py  obsolete_scan.py
backend/migrations/: env.py
backend/migrations/versions/: 0001_initial_schema.py  0002_seed_bu_templates.py  0002_seed_data.py
backend/tests/: conftest.py
backend/tests/contract/: test_openapi_schema.py
backend/tests/integration/: test_attributes.py  test_auth.py  test_documents.py  test_projects.py
backend/tests/unit/: test_attribute_service.py  test_document_service.py  test_security.py
frontend/: .eslintrc.cjs  index.html  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/i18n/: en.json  index.ts  (+1 more)
specs/001-doce-erp-dms/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
(+27 files in other folders)
